[package]
name = "bq769x0"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.6.2"

[dependencies.crc-any]
version = "2.3.0"
default-features = false

[features]
default = ["no_std"]
crc = []
no_std = []
std = []