[package]
name = "bq769x0"
version = "0.3.1"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"
license = "MIT"
description = "BQ76920, BQ76930 and BQ76940 battery AFE no_std hal"
repository = "https://github.com/romixlab/bq769x0"

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.6"
bitflags = "1"

[dependencies.crc-any]
version = "2.3"
default-features = false

[dependencies.serde]
version = "1.0.100"
features = ["derive"]
default-features = false

[features]
default = ["no_std"]
crc = []
no_std = []
std = []